--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.2",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.10.1",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
