--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~10.2.5",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.2",
+    "moment": "^2.29.4",
     "rxjs": "~6.6.0",
     "sweetalert2": "^11.10.1",
     "tslib": "^2.0.0",
